; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-manager.c_manager_sigusr2.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-manager.c_manager_sigusr2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.signalfd_siginfo = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.signalfd_siginfo*, %struct.signalfd_siginfo*, i8*)* @manager_sigusr2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @manager_sigusr2(%struct.signalfd_siginfo* %0, %struct.signalfd_siginfo* %1, i8* %2) #0 {
  %4 = alloca %struct.signalfd_siginfo*, align 8
  %5 = alloca %struct.signalfd_siginfo*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.signalfd_siginfo*, align 8
  store %struct.signalfd_siginfo* %0, %struct.signalfd_siginfo** %4, align 8
  store %struct.signalfd_siginfo* %1, %struct.signalfd_siginfo** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.signalfd_siginfo*
  store %struct.signalfd_siginfo* %9, %struct.signalfd_siginfo** %7, align 8
  %10 = load %struct.signalfd_siginfo*, %struct.signalfd_siginfo** %4, align 8
  %11 = call i32 @assert(%struct.signalfd_siginfo* %10)
  %12 = load %struct.signalfd_siginfo*, %struct.signalfd_siginfo** %5, align 8
  %13 = call i32 @assert(%struct.signalfd_siginfo* %12)
  %14 = load %struct.signalfd_siginfo*, %struct.signalfd_siginfo** %7, align 8
  %15 = call i32 @assert(%struct.signalfd_siginfo* %14)
  %16 = load %struct.signalfd_siginfo*, %struct.signalfd_siginfo** %7, align 8
  %17 = call i32 @manager_flush_caches(%struct.signalfd_siginfo* %16)
  ret i32 0
}

declare dso_local i32 @assert(%struct.signalfd_siginfo*) #1

declare dso_local i32 @manager_flush_caches(%struct.signalfd_siginfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
